penguins and turtles

--- a/nicolasthepenguin.ipynb
+++ b/nicolasthepenguin.ipynb
@@ -1790,7 +1790,7 @@
         "    ]\n",
         ")\n",
         "\n",
-        "model.save('model')"
+        "model.save('model')\n"
       ]
     },
     {
